Review fixes: Config cleanup, strict broken links, and metadata

--- a/docs/api/rest-api.mdx
+++ b/docs/api/rest-api.mdx
@@ -1,9 +1,9 @@
 ---
-title: API Reference
+title: REST API
 description: API reference for Koreshield.
 slug: /api/rest-api
 ---
 
-# API Reference
+# REST API
 
 Coming soon...
