--- a/docs/configuration/index.mdx
+++ b/docs/configuration/index.mdx
@@ -2,6 +2,8 @@
 title: Configuration
 description: Configure Koreshield to match your requirements.
 slug: /configuration
+sidebar_label: Configuration
+sidebar_position: 20
 ---
 
 # Configuration
