--- a/docs/api/index.mdx
+++ b/docs/api/index.mdx
@@ -2,6 +2,8 @@
 title: API Reference
 description: Complete API reference for integrating Koreshield.
 slug: /api
+sidebar_label: API Reference
+sidebar_position: 10
 ---
 
 # API Reference
