--- a/docs/case-studies/index.mdx
+++ b/docs/case-studies/index.mdx
@@ -2,6 +2,8 @@
 title: Case Studies
 description: Real-world examples of Koreshield in action.
 slug: /case-studies
+sidebar_label: Case Studies
+sidebar_position: 30
 ---
 
 # Case Studies
