--- a/docs/getting-started/index.mdx
+++ b/docs/getting-started/index.mdx
@@ -2,6 +2,8 @@
 title: Getting Started
 description: Getting started with Koreshield.
 slug: /getting-started
+sidebar_label: Getting Started
+sidebar_position: 1
 ---
 
 # Getting Started
