Update doc footer link and provider list

--- a/docs/getting-started/index.mdx
+++ b/docs/getting-started/index.mdx
@@ -42,7 +42,7 @@ Koreshield operates as a **transparent proxy**. It intercepts API requests, perf
 
 ### Universal Compatibility
 
-- **Provider Agnostic**: Unified API for OpenAI, Anthropic, DeepSeek, and local models.
+- **Provider Agnostic**: Unified API for OpenAI, Anthropic, Gemini, DeepSeek, and local models.
 - **SDK Support**: Native clients for Python and TypeScript/JavaScript.
 - **Framework Integrations**: seamlessly integrates with LangChain, LlamaIndex, and Vercel AI SDK.
 
